Bug 621816 - "Assertion failure: unexpected constantly false guard detected" with typed array. r=vlad.